cmake_minimum_required(VERSION 3.17)
project(WayOfOffer_Phase2)

set(CMAKE_CXX_STANDARD 11)


add_subdirectory(1_Tree)
add_subdirectory(2_BackTracing)
add_subdirectory(3_Sort)
add_subdirectory(4_Binary)
add_subdirectory(5_BitOperation)
add_subdirectory(6_DynamicProgramming)
add_subdirectory(7_HashMap)