project(3_Sort)

add_executable(3-1_BubbleSort 3-1_BubbleSort.cpp)
add_executable(3-2_InsertSort 3-2_InsertSort.cpp)
add_executable(3-3_SelectionSort 3-3_SelectionSort.cpp)


add_executable(3-4_MergeSort 3-4_MergeSort.cpp)
add_executable(3-4-1_littleSum 3-4-1_littleSum.cpp)
add_executable(3-4-2_ReversePair 3-4-2_ReversePair.cpp)
