project(8_LinkedList)

add_executable(Leetcode_203_RemoveLinkedListElement Leetcode_203_RemoveLinkedListElement.cpp)
add_executable(Leetcode_707_DesignLinkedList Leetcode_707_DesignLinkedList.cpp)

add_executable(Leetcode_206_ReverseLinkedList Leetcode_206_ReverseLinkedList.cpp)

add_executable(Leetcode_2_AddTwoNumber Leetcode_2_AddTwoNumber.cpp)